styles/orders.scss
.orders-container {
  padding: 24px;
}

.order-time-textbox {
  display: block;
}
.orderInfo {
  display: flex;
  flex-direction: row;
}
article .new-order-article {
  padding: 10px 0px 15px 15px;
}
.newOrder {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.order {
  padding: 10px 24px 24px 24px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.accept-order.btn {
  background-color: #f3b4e3;
  border-radius: 8px;
  .lds-dual-ring {
    display: none;
    width: 80px;
    height: 80px;
    margin: 0 auto;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid rgb(0, 0, 0);
    border-color: rgb(0, 0, 0) transparent rgb(10, 10, 10) transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
}

